<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layoutDirection="ltr"

    android:background="@drawable/dialoge_back">

    <ImageView
        android:id="@+id/motionIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo2"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motion_tracking_permission"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/pmedium"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_track_your_movements_the_app_requires_permission_to_access_motion_sensors_please_enable_motion_tracking_in_your_device_settings"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="#625C5C" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@drawable/back_buttom"
            android:text="@string/cancel2"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="@font/psemibold"
            android:layout_marginStart="8dp"

            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToSettings"
            android:layout_width="wrap_content"
            android:layout_height="42sp"
            android:layout_marginStart="8dp"

            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            android:fontFamily="@font/psemibold"
            android:textAllCaps="false"
            android:background="@drawable/stroke_back"

            android:text="@string/go_to_settings"


            android:textColor="@color/black"
            tools:ignore="HardcodedText" />
    </LinearLayout>


</LinearLayout>
