<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"

    >
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/stroke_back"

        android:backgroundTint="@color/white"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo2"
            android:layout_gravity="center"/>

        <!-- Text Below the Logo -->
        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/would_you_like_to_confirm_vivo_y20s_s_invitation"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/psemibold"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/descriptionTextView122"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/device_name"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:fontFamily="@font/psemibold"
            android:gravity="center"
            android:layout_gravity="center"/>

        <!-- Button Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Button 1 -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_marginEnd="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"

                android:background="@drawable/stroke_back"
                android:fontFamily="@font/pregular"

                android:textAllCaps="false"
                android:text="@string/no"
                android:textColor="@color/black"/>

            <!-- Button 2 -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_marginStart="8dp"
                android:text="@string/confirm"
                android:background="@drawable/back_buttom"
                android:paddingStart="12dp"


                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:fontFamily="@font/pregular"
                android:textAllCaps="false"
                android:paddingEnd="12dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
