<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="26dp"

    android:background="@drawable/dialoge_back"
    android:padding="8dp">


    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/cross"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pbold"
        android:text="@string/invite_others"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClose" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/pmedium"
        android:text="@string/send_your_code_to_start_tracking_others_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="52dp"

        android:layout_marginTop="24dp"
        android:background="@drawable/back_buttom"
        android:fontFamily="@font/psemibold"
        android:gravity="center_vertical"
        android:text="@string/_234d4e5"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_buttom"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/psemibold"
        android:gravity="center_vertical"
        android:text="@string/copy"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView9"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pbold"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pbold"
        android:text="@string/share_through"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/btnShare"

        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:padding="2dp"
            android:layout_margin="2dp"
            android:src="@drawable/bi_facebook"

            />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:padding="2dp"
            android:layout_margin="2dp"
            android:src="@drawable/linkdln"

            />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:padding="2dp"
            android:layout_margin="2dp"
            android:src="@drawable/instagram"

            />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:padding="2dp"
            android:layout_margin="2dp"
            android:src="@drawable/whatsapp"

            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
